--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,12 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇱_CL_智利
+    name: 🇺🇸_US_美国_1
     type: ss
-    server: 190.120.230.9
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
+    server: 169.197.141.186
+    port: 801
+    password: tvX1v#NSFP_LG_bJ
+    cipher: chacha20-ietf-poly1305
   - &id002
     name: 🇵🇦_PA_巴拿马
     type: ss
@@ -20,179 +20,76 @@ proxies:
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
   - &id003
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: a3.bcbot.in
-    port: 8880
-    cipher: auto
-    uuid: ce9aadc8-8c6e-4867-d247-9a84b469ac27
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a3.bcbot.in
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 54.188.25.27
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 38.68.134.202
-    port: 5003
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id006
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 51.159.111.208
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 169.197.141.186
-    port: 801
-    password: tvX1v#NSFP_LG_bJ
-    cipher: chacha20-ietf-poly1305
-  - &id008
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: whatismyipaddress.com
-    port: 2052
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mgtow_cdn.yunjisuan.cf
-  - &id009
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 38.180.33.136
-    port: 50104
-    cipher: auto
-    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇯🇵_JP_日本->🇺🇸_US_美国
-    type: vmess
-    server: 47.91.28.15
-    port: 2052
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mgtow_cdn.yunjisuan.cf
-  - &id011
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 212.102.47.198
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id012
-    name: 🇦🇷_AR_阿根廷
-    type: ss
-    server: 190.103.176.29
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id013
     name: 🇲🇽_MX_墨西哥
     type: ss
     server: 190.103.179.23
     port: 989
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
-  - &id014
-    name: 🇫🇷_FR_法国_2
+  - &id004
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 38.68.134.202
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id005
+    name: 🇧🇦_BA_波黑
+    type: ss
+    server: 185.164.35.9
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id006
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id007
+    name: 🇫🇷_FR_法国_1
     type: ss
     server: 195.154.169.198
     port: 989
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
-  - &id015
-    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: skk.moe
-    port: 8080
-    cipher: auto
-    uuid: 54d4d640-731c-4572-d0d4-e8a617816470
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu4.mac2win.top
-  - &id016
-    name: 🇫🇷_FR_法国_3
+  - &id008
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 35.87.39.181
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇫🇷_FR_法国_2
     type: ss
     server: 145.239.6.202
     port: 4444
     password: pKEW8JPByTVTLtM
     cipher: aes-256-gcm
-  - &id017
-    name: 🇺🇸_US_美国_8
+  - &id010
+    name: 🇬🇧_GB_英国_1
+    type: ss
+    server: 77.72.5.113
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
+    server: us.he.07.nekocloud.cn
+    port: 10002
     cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    uuid: 9c2b64eb-03d8-3cc7-9ba6-2e25002f59b5
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id018
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: els_trojanone.yunjisuan.cf
-    port: 14866
-    udp: true
-    password: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    sni: els_trojanone.yunjisuan.cf
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: lt2-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: ea2928cb-f9cc-4747-ab60-d23abe3ba1e6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id020
-    name: 🇺🇸_US_美国_10
+      path: /catnet
+  - &id012
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 104.17.184.241
     port: 80
@@ -206,8 +103,35 @@ proxies:
       path: /
       headers:
         host: mg_cdn.yunjisuan.cf
-  - &id021
-    name: 🇩🇪_DE_德国
+  - &id013
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: 77.72.5.150
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 45.58.153.25
+    port: 30000
+    cipher: auto
+    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702961716738
+  - &id015
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 35.90.10.174
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇩🇪_DE_德国_1
     type: vmess
     server: 217.160.45.31
     port: 8880
@@ -219,145 +143,8 @@ proxies:
     network: ws
     ws-opts:
       path: /
-  - &id022
-    name: 🇬🇧_GB_英国
-    type: ss
-    server: 77.72.5.150
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id023
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: www.udemy.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id024
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 172.67.136.23
-    port: 8880
-    cipher: auto
-    uuid: 79593a58-ed7e-4901-c3c7-8a993af4ab1c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a8.bcbot.in
-  - &id025
-    name: 🇺🇸_US_美国->🇯🇵_JP_日本
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2052
-    cipher: auto
-    uuid: 1eb5c2af-9211-461d-843b-de0de5de1d80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/gp9z98zmv
-      headers:
-        host: us3k6jyp6cx4.nezfyiam.xyz
-  - &id026
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 94.131.14.177
-    port: 80
-    cipher: auto
-    uuid: ea2928cb-f9cc-4747-ab60-d23abe3ba1e6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id027
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id028
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 52.210.135.125
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id029
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: whatismyipaddress.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mgtow_cdn.yunjisuan.cf
-  - &id030
-    name: 🇸🇪_SE_瑞典
-    type: vmess
-    server: www.shopify.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id031
-    name: 🇺🇸_US_美国_16
-    type: vmess
-    server: www.glassdoor.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id032
-    name: 🇺🇸_US_美国_17
+  - &id017
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: 132.145.132.227
     port: 37121
@@ -369,20 +156,85 @@ proxies:
     network: ws
     ws-opts:
       path: /
-  - &id033
-    name: 🇫🇷_FR_法国_4
+  - &id018
+    name: 🇺🇸_US_美国_9
     type: ss
-    server: 51.158.150.168
-    port: 4444
-    password: pKEW8JPByTVTLtM
+    server: 38.68.134.202
+    port: 5004
+    password: g5MeD6Ft3CWlJId
     cipher: aes-256-gcm
-  - &id034
-    name: 🇺🇸_US_美国_18
+  - &id019
+    name: 🇺🇸_US_美国_10
+    type: ss
+    server: 38.54.108.222
+    port: 8119
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id020
+    name: 🇬🇮_GI_直布罗陀
     type: vmess
-    server: cover.mac2win.top
-    port: 8080
+    server: 95.164.69.27
+    port: 80
     cipher: auto
-    uuid: 54d4d640-731c-4572-d0d4-e8a617816470
+    uuid: cd4a6d0d-4b26-4ee1-8a42-c2878b5c3b2a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: internet.life.com.by
+  - &id021
+    name: 🇯🇵_JP_日本
+    type: vmess
+    server: 103.35.188.226
+    port: 80
+    cipher: auto
+    uuid: 098e7cdd-03b4-435d-8c41-ea608fa637c2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 103.35.188.226
+  - &id022
+    name: 🇳🇿_NZ_新西兰
+    type: vmess
+    server: 141.11.123.205
+    port: 30870
+    cipher: auto
+    uuid: f8e7c07a-4c32-4fc7-9169-073669416331
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id023
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 94.131.14.177
+    port: 2082
+    cipher: auto
+    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 94.131.14.177
+  - &id024
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: sbl2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -390,13 +242,123 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: icu4.mac2win.top
-  - &id035
-    name: 🇺🇸_US_美国_19
+        host: sbl2.shabijichang.com
+  - &id025
+    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
+    type: vmess
+    server: yhnsb3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: yhnsb3.shabijichang.com
+  - &id026
+    name: 🇮🇪_IE_爱尔兰_1
+    type: trojan
+    server: 54.76.45.13
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+    alpn:
+      - http/1.1
+  - &id027
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 3.69.6.133
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+    alpn:
+      - http/1.1
+  - &id028
+    name: 🇩🇪_DE_德国_3
+    type: trojan
+    server: 5.104.108.120
+    port: 443
+    udp: true
+    password: e86e242e-b5d5-46ae-a410-3684f7d70ac2
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇺🇸_US_美国_13
     type: ss
-    server: 38.54.108.222
-    port: 8119
-    password: cdBIDV42DCwnfIN
+    server: 45.58.39.13
+    port: 58428
+    password: 31LdYhP8Ae
+    cipher: aes-256-gcm
+  - &id030
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 104.237.128.72
+    port: 14432
+    cipher: auto
+    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ss
+    server: service.ouluyun9803.com
+    port: 50003
+    password: 73637cec-699d-4d87-99af-0776ac880604
+    cipher: chacha20-ietf-poly1305
+  - &id032
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: ss
+    server: service.ouluyun9803.com
+    port: 21003
+    password: 73637cec-699d-4d87-99af-0776ac880604
+    cipher: chacha20-ietf-poly1305
+  - &id033
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: els_trojanone.yunjisuan.cf
+    port: 14866
+    udp: true
+    password: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    sni: els_trojanone.yunjisuan.cf
+    skip-cert-verify: true
+    network: tcp
+  - &id034
+    name: 🇫🇷_FR_法国_3
+    type: trojan
+    server: 13.39.1.177
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id035
+    name: 🇮🇪_IE_爱尔兰_2
+    type: trojan
+    server: 18.200.62.178
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id036
+    name: 🇺🇸_US_美国_15
+    type: ss
+    server: 38.68.134.69
+    port: 2376
+    password: faBAoD54k87UJG7
     cipher: aes-256-gcm
 proxy-groups:
   - name: PROXY
@@ -459,6 +421,7 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -499,6 +462,7 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -537,6 +501,7 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
