--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,88 +8,106 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: ss
-    server: 169.197.141.186
-    port: 801
-    password: tvX1v#NSFP_LG_bJ
-    cipher: chacha20-ietf-poly1305
+    server: 45.58.39.13
+    port: 58428
+    password: 31LdYhP8Ae
+    cipher: aes-256-gcm
   - &id002
-    name: 🇵🇦_PA_巴拿马
-    type: ss
-    server: 138.186.142.4
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 45.58.153.25
+    port: 30000
+    cipher: auto
+    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702961716738
   - &id003
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 38.68.134.202
+    port: 8091
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id004
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 38.68.134.202
+    port: 5004
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id005
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 38.68.134.202
+    port: 2375
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id006
     name: 🇲🇽_MX_墨西哥
     type: ss
     server: 190.103.179.23
     port: 989
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 38.68.134.202
-    port: 5003
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id005
-    name: 🇧🇦_BA_波黑
-    type: ss
-    server: 185.164.35.9
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 212.102.47.198
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
   - &id007
-    name: 🇫🇷_FR_法国_1
+    name: 🇵🇦_PA_巴拿马
     type: ss
-    server: 195.154.169.198
+    server: 138.186.142.4
     port: 989
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
   - &id008
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 35.87.39.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id009
-    name: 🇫🇷_FR_法国_2
+    name: 🇫🇷_FR_法国_1
     type: ss
     server: 145.239.6.202
     port: 4444
     password: pKEW8JPByTVTLtM
     cipher: aes-256-gcm
-  - &id010
-    name: 🇬🇧_GB_英国_1
+  - &id009
+    name: 🇪🇸_ES_西班牙
     type: ss
-    server: 77.72.5.113
+    server: 92.38.171.89
     port: 989
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
+  - &id010
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 169.197.141.186
+    port: 801
+    password: tvX1v#NSFP_LG_bJ
+    cipher: chacha20-ietf-poly1305
   - &id011
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    name: 🇦🇷_AR_阿根廷
+    type: ss
+    server: 190.103.176.29
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇨🇱_CL_智利
+    type: ss
+    server: 190.120.230.9
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇺🇸_US_美国_7
     type: vmess
-    server: us.he.07.nekocloud.cn
-    port: 10002
+    server: 38.180.33.136
+    port: 50104
     cipher: auto
-    uuid: 9c2b64eb-03d8-3cc7-9ba6-2e25002f59b5
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /catnet
-  - &id012
-    name: 🇺🇸_US_美国_5
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: 104.17.184.241
     port: 80
@@ -103,39 +121,12 @@ proxies:
       path: /
       headers:
         host: mg_cdn.yunjisuan.cf
-  - &id013
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: 77.72.5.150
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 45.58.153.25
-    port: 30000
-    cipher: auto
-    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1702961716738
   - &id015
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 35.90.10.174
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇩🇪_DE_德国_1
+    name: 🇩🇪_DE_德国
     type: vmess
     server: 217.160.45.31
     port: 8880
-    cipher: aes-128-gcm
+    cipher: auto
     uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
     alterId: 0
     tls: false
@@ -143,34 +134,56 @@ proxies:
     network: ws
     ws-opts:
       path: /
+  - &id016
+    name: 🇬🇧_GB_英国_1
+    type: ss
+    server: 77.72.5.150
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
   - &id017
-    name: 🇺🇸_US_美国_8
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: 77.72.5.113
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇺🇸_US_美国_9
+    type: ss
+    server: 35.90.10.174
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id019
+    name: 🇮🇳_IN_印度_1
     type: vmess
-    server: 132.145.132.227
-    port: 37121
+    server: ru1-vmess.sshmax.xyz
+    port: 80
     cipher: auto
-    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-  - &id018
-    name: 🇺🇸_US_美国_9
-    type: ss
-    server: 38.68.134.202
-    port: 5004
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id019
-    name: 🇺🇸_US_美国_10
-    type: ss
-    server: 38.54.108.222
-    port: 8119
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
+      path: /vmess
+      headers:
+        host: ru1-vmess.sshmax.xyz
   - &id020
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 94.131.14.177
+    port: 2082
+    cipher: auto
+    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id021
     name: 🇬🇮_GI_直布罗陀
     type: vmess
     server: 95.164.69.27
@@ -185,41 +198,39 @@ proxies:
       path: /vmess
       headers:
         host: internet.life.com.by
-  - &id021
-    name: 🇯🇵_JP_日本
+  - &id022
+    name: 🇺🇸_US_美国_11
     type: vmess
-    server: 103.35.188.226
-    port: 80
+    server: 104.237.128.72
+    port: 14432
     cipher: auto
-    uuid: 098e7cdd-03b4-435d-8c41-ea608fa637c2
+    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 103.35.188.226
-  - &id022
-    name: 🇳🇿_NZ_新西兰
+    network: tcp
+  - &id023
+    name: 🇺🇸_US_美国->🇺🇦_UA_乌克兰
     type: vmess
-    server: 141.11.123.205
-    port: 30870
+    server: 104.17.2.183
+    port: 80
     cipher: auto
-    uuid: f8e7c07a-4c32-4fc7-9169-073669416331
+    uuid: f256a3ae-0f85-4a1d-d0cd-2d0b4b73f4f1
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-  - &id023
-    name: 🇺🇸_US_美国_11
+      headers:
+        host: v3ra3do.wakeuptimerap.shop
+  - &id024
+    name: 🇳🇱_NL_荷兰
     type: vmess
-    server: 94.131.14.177
-    port: 2082
+    server: 91.242.229.77
+    port: 80
     cipher: auto
-    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
+    uuid: 56890326-df58-432d-be1e-67064e2b4355
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -227,8 +238,8 @@ proxies:
     ws-opts:
       path: /vmess
       headers:
-        host: 94.131.14.177
-  - &id024
+        host: nl2.xv2ray.net
+  - &id025
     name: 🇺🇸_US_美国_12
     type: vmess
     server: sbl2.shabijichang.com
@@ -243,25 +254,10 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id025
-    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
-    type: vmess
-    server: yhnsb3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: yhnsb3.shabijichang.com
   - &id026
-    name: 🇮🇪_IE_爱尔兰_1
+    name: 🇬🇧_GB_英国_3
     type: trojan
-    server: 54.76.45.13
+    server: 18.169.195.55
     port: 22222
     udp: true
     password: telegram-id-directvpn
@@ -271,95 +267,102 @@ proxies:
     alpn:
       - http/1.1
   - &id027
-    name: 🇩🇪_DE_德国_2
+    name: 🇬🇧_GB_英国_4
     type: trojan
-    server: 3.69.6.133
+    server: 35.176.231.230
     port: 22222
     udp: true
-    password: telegram-id-privatevpns
+    password: telegram-id-directvpn
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
     alpn:
       - http/1.1
   - &id028
-    name: 🇩🇪_DE_德国_3
-    type: trojan
-    server: 5.104.108.120
-    port: 443
-    udp: true
-    password: e86e242e-b5d5-46ae-a410-3684f7d70ac2
-    skip-cert-verify: true
-    network: tcp
-  - &id029
     name: 🇺🇸_US_美国_13
-    type: ss
-    server: 45.58.39.13
-    port: 58428
-    password: 31LdYhP8Ae
-    cipher: aes-256-gcm
-  - &id030
-    name: 🇺🇸_US_美国_14
     type: vmess
-    server: 104.237.128.72
-    port: 14432
+    server: 94.131.14.177
+    port: 80
     cipher: auto
-    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
+    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: lt2-vmess.sshmax.xyz
+  - &id029
+    name: 🇮🇳_IN_印度_2
+    type: vmess
+    server: 103.113.68.233
+    port: 8880
+    cipher: auto
+    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 103.113.68.233
+  - &id030
+    name: 🇺🇸_US_美国_14
+    type: ss
+    server: 38.54.108.222
+    port: 8119
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
   - &id031
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ss
-    server: service.ouluyun9803.com
-    port: 50003
-    password: 73637cec-699d-4d87-99af-0776ac880604
-    cipher: chacha20-ietf-poly1305
+    name: 🇮🇳_IN_印度_3
+    type: vmess
+    server: 103.113.68.233
+    port: 80
+    cipher: auto
+    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
   - &id032
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: ss
-    server: service.ouluyun9803.com
-    port: 21003
-    password: 73637cec-699d-4d87-99af-0776ac880604
-    cipher: chacha20-ietf-poly1305
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+    type: vmess
+    server: cover.mac2win.top
+    port: 8080
+    cipher: auto
+    uuid: 54d4d640-731c-4572-d0d4-e8a617816470
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu4.mac2win.top
   - &id033
-    name: 🇷🇺_RU_俄罗斯联邦
+    name: 🇬🇧_GB_英国_5
     type: trojan
-    server: els_trojanone.yunjisuan.cf
-    port: 14866
+    server: 18.171.112.248
+    port: 22222
     udp: true
-    password: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    sni: els_trojanone.yunjisuan.cf
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
   - &id034
-    name: 🇫🇷_FR_法国_3
+    name: 🇫🇷_FR_法国_2
     type: trojan
-    server: 13.39.1.177
+    server: 13.39.117.5
     port: 22222
     udp: true
     password: telegram-id-privatevpns
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id035
-    name: 🇮🇪_IE_爱尔兰_2
-    type: trojan
-    server: 18.200.62.178
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id036
-    name: 🇺🇸_US_美国_15
-    type: ss
-    server: 38.68.134.69
-    port: 2376
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
 proxy-groups:
   - name: PROXY
     type: select
@@ -420,8 +423,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -461,8 +462,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -500,8 +499,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
