--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,111 +6,71 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 45.58.39.13
-    port: 58428
-    password: 31LdYhP8Ae
-    cipher: aes-256-gcm
-  - &id002
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: 45.58.153.25
-    port: 30000
+    server: 2bbiozh7wbc.servecounterstrike.com
+    port: 2083
     cipher: auto
-    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
-    alterId: 64
+    uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
+    alterId: 0
     tls: true
     skip-cert-verify: true
+    servername: SnsksKaa.mookomeilz.homes
     network: ws
     ws-opts:
-      path: /path/1702961716738
-  - &id003
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 38.68.134.202
-    port: 8091
-    password: PCnnH6SQSnfoS27
-    cipher: aes-256-gcm
-  - &id004
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 38.68.134.202
-    port: 5004
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id005
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 38.68.134.202
-    port: 2375
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
-  - &id006
-    name: 🇲🇽_MX_墨西哥
-    type: ss
-    server: 190.103.179.23
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇵🇦_PA_巴拿马
-    type: ss
-    server: 138.186.142.4
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 145.239.6.202
-    port: 4444
-    password: pKEW8JPByTVTLtM
-    cipher: aes-256-gcm
-  - &id009
-    name: 🇪🇸_ES_西班牙
-    type: ss
-    server: 92.38.171.89
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 169.197.141.186
-    port: 801
-    password: tvX1v#NSFP_LG_bJ
-    cipher: chacha20-ietf-poly1305
-  - &id011
-    name: 🇦🇷_AR_阿根廷
-    type: ss
-    server: 190.103.176.29
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇨🇱_CL_智利
-    type: ss
-    server: 190.120.230.9
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇺🇸_US_美国_7
+      path: /snsk
+      headers:
+        host: PAneljadid.mookoMEilz.homes
+  - &id002
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: 38.180.33.136
-    port: 50104
+    server: 104.19.154.92
+    port: 2083
     cipher: auto
-    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: SnsksKaa.mookomeilz.homes
+    network: ws
+    ws-opts:
+      path: /snsk
+      headers:
+        host: PAneljadid.mookoMEilz.homes
+  - &id003
+    name: 🇺🇸_US_美国_1
+    type: ss
+    server: 54.188.25.27
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id004
+    name: 🇳🇱_NL_荷兰_1
+    type: ss
+    server: 51.15.27.48
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: web.parspack.com
+    port: 80
+    cipher: auto
+    uuid: 7fc27c1c-5052-4d6b-8099-1a8c04f1cd7b
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_8
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: PArspAcK51.eSMAILkOrEA.sHoP
+  - &id006
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 104.17.184.241
-    port: 80
+    server: singapore.com
+    port: 2052
     cipher: auto
     uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
     alterId: 0
@@ -121,96 +81,15 @@ proxies:
       path: /
       headers:
         host: mg_cdn.yunjisuan.cf
-  - &id015
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: 217.160.45.31
-    port: 8880
-    cipher: auto
-    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id016
-    name: 🇬🇧_GB_英国_1
+  - &id007
+    name: 🇵🇦_PA_巴拿马
     type: ss
-    server: 77.72.5.150
+    server: 138.186.142.4
     port: 989
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
-  - &id017
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: 77.72.5.113
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id018
-    name: 🇺🇸_US_美国_9
-    type: ss
-    server: 35.90.10.174
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id019
-    name: 🇮🇳_IN_印度_1
-    type: vmess
-    server: ru1-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: ru1-vmess.sshmax.xyz
-  - &id020
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 94.131.14.177
-    port: 2082
-    cipher: auto
-    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id021
-    name: 🇬🇮_GI_直布罗陀
-    type: vmess
-    server: 95.164.69.27
-    port: 80
-    cipher: auto
-    uuid: cd4a6d0d-4b26-4ee1-8a42-c2878b5c3b2a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: internet.life.com.by
-  - &id022
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: 104.237.128.72
-    port: 14432
-    cipher: auto
-    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇺🇸_US_美国->🇺🇦_UA_乌克兰
+  - &id008
+    name: 🇺🇸_US_美国->🇺🇦_UA_乌克兰_1
     type: vmess
     server: 104.17.2.183
     port: 80
@@ -224,8 +103,94 @@ proxies:
       path: /
       headers:
         host: v3ra3do.wakeuptimerap.shop
-  - &id024
-    name: 🇳🇱_NL_荷兰
+  - &id009
+    name: 🇺🇸_US_美国->🇺🇦_UA_乌克兰_2
+    type: vmess
+    server: glasco.fx-trader.shop
+    port: 80
+    cipher: auto
+    uuid: f256a3ae-0f85-4a1d-d0cd-2d0b4b73f4f1
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: v3ra3do.wakeuptimerap.shop
+  - &id010
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: a3.bcbot.in
+    port: 8880
+    cipher: auto
+    uuid: ce9aadc8-8c6e-4867-d247-9a84b469ac27
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: a3.bcbot.in
+  - &id011
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 195.154.169.198
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇧🇦_BA_波黑
+    type: ss
+    server: 185.164.35.9
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 195.154.185.174
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id015
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 51.159.111.208
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇲🇽_MX_墨西哥
+    type: ss
+    server: 190.103.179.23
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id017
+    name: 🇪🇸_ES_西班牙
+    type: ss
+    server: 92.38.171.89
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇬🇧_GB_英国
+    type: ss
+    server: 77.72.5.113
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id019
+    name: 🇳🇱_NL_荷兰_2
     type: vmess
     server: 91.242.229.77
     port: 80
@@ -239,13 +204,13 @@ proxies:
       path: /vmess
       headers:
         host: nl2.xv2ray.net
-  - &id025
-    name: 🇺🇸_US_美国_12
+  - &id020
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: sbl2.shabijichang.com
+    server: 104.17.184.241
     port: 80
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -253,88 +218,44 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl2.shabijichang.com
-  - &id026
-    name: 🇬🇧_GB_英国_3
-    type: trojan
-    server: 18.169.195.55
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id027
-    name: 🇬🇧_GB_英国_4
-    type: trojan
-    server: 35.176.231.230
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id028
-    name: 🇺🇸_US_美国_13
+        host: mg_cdn.yunjisuan.cf
+  - &id021
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 94.131.14.177
+    server: 172.67.217.144
     port: 80
     cipher: auto
-    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
+    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /vmess
+      path: /
       headers:
-        host: lt2-vmess.sshmax.xyz
-  - &id029
-    name: 🇮🇳_IN_印度_2
+        host: lv1.xv2ray.net
+  - &id022
+    name: 🇺🇸_US_美国_7
     type: vmess
-    server: 103.113.68.233
+    server: 172.67.187.109
+    port: 80
+    cipher: auto
+    uuid: 2e87cebc-977b-4fec-b079-b1ddc55b19c8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ee1.xv2ray.net
+  - &id023
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 104.21.32.215
     port: 8880
     cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 103.113.68.233
-  - &id030
-    name: 🇺🇸_US_美国_14
-    type: ss
-    server: 38.54.108.222
-    port: 8119
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
-  - &id031
-    name: 🇮🇳_IN_印度_3
-    type: vmess
-    server: 103.113.68.233
-    port: 80
-    cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id032
-    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: cover.mac2win.top
-    port: 8080
-    cipher: auto
-    uuid: 54d4d640-731c-4572-d0d4-e8a617816470
+    uuid: ce9aadc8-8c6e-4867-d247-9a84b469ac27
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -342,27 +263,61 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: icu4.mac2win.top
-  - &id033
-    name: 🇬🇧_GB_英国_5
-    type: trojan
-    server: 18.171.112.248
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
+        host: a3.bcbot.in
+  - &id024
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 132.145.132.227
+    port: 37121
+    cipher: auto
+    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id034
-    name: 🇫🇷_FR_法国_2
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: 132.145.132.227
+  - &id025
+    name: 🇳🇱_NL_荷兰_3
+    type: vmess
+    server: 91.242.229.69
+    port: 2086
+    cipher: auto
+    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: nl1.xv2ray.net
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id026
+    name: 🇩🇪_DE_德国
     type: trojan
-    server: 13.39.117.5
+    server: 3.79.162.137
     port: 22222
     udp: true
     password: telegram-id-privatevpns
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
+  - &id027
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: www.visa.com.tw
+    port: 8880
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mgthree_cdn.yunjisuan.cf
 proxy-groups:
   - name: PROXY
     type: select
@@ -416,13 +371,6 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -455,13 +403,6 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
   - name: SELECT
     type: select
     proxies:
@@ -492,13 +433,6 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
